# Dev-Container-Template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
doc/: CMakeLists.txt  Doxyfile
scripts/: build_production.sh  build_unittests.sh  clean_build.sh
src/: CMakeLists.txt  Definitions.hpp  SudokuData.cpp  SudokuData.hpp  SudokuElement.cpp  SudokuElement.hpp  SudokuEntry.cpp  SudokuEntry.hpp  SudokuIndex.cpp  SudokuIndex.hpp  main.cpp
tests/: CMakeLists.txt  Test_SudokuData.cpp  Test_SudokuElement.cpp  Test_SudokuEntry.cpp  Test_SudokuIndex.cpp
